log
Thu 20 Apr 2023 04:43:00 PM UTC: 
 tests:  1|8
total_score: 0/70
689cda8
Thu 20 Apr 2023 04:56:45 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:22: error: ‘key’ undeclared (first use in this function)
   43 |     new->pair->key = key;
      |                      ^~~
treemap.c:43:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:24: error: ‘value’ undeclared (first use in this function)
   44 |     new->pair->value = value;
      |                        ^~~~~
treemap.c:46:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |     return new;
      |            ^~~
treemap.c:47:8: error: ‘TreeNode’ has no member named ‘lower_than’
   47 |     new->lower_than = NULL;
      |        ^~
treemap.c:48:8: error: ‘TreeNode’ has no member named ‘lower_than’
   48 |     new->lower_than = lower_than;
      |        ^~
treemap.c:41:12: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |     Pair * pair = (Pair*) malloc (sizeof(Pair));
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
41ce598
Thu 20 Apr 2023 04:59:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:32:8: error: ‘new’ is a pointer; did you mean to use ‘->’?
   32 |     new.pair = (Pair *)malloc(sizeof(Pair));
      |        ^
      |        ->
treemap.c: In function ‘createTreeMap’:
treemap.c:43:22: error: ‘key’ undeclared (first use in this function)
   43 |     new->pair->key = key;
      |                      ^~~
treemap.c:43:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:24: error: ‘value’ undeclared (first use in this function)
   44 |     new->pair->value = value;
      |                        ^~~~~
treemap.c:46:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |     return new;
      |            ^~~
treemap.c:47:8: error: ‘TreeNode’ has no member named ‘lower_than’
   47 |     new->lower_than = NULL;
      |        ^~
treemap.c:48:8: error: ‘TreeNode’ has no member named ‘lower_than’
   48 |     new->lower_than = lower_than;
      |        ^~
treemap.c:41:12: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |     Pair * pair = (Pair*) malloc (sizeof(Pair));
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
2a1ad2d
